--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <a href="http://github.com/Alipi/alipi/zipball/master">zip</a> or
       <a href="http://github.com/Alipi/alipi/tarball/master">tar</a> formats.
     </p>
+    <p> You can download the extension at 
+      <a href="https://github.com/downloads/Alipi/alipi/alipi.xpi">this.</a>
+      </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/Alipi/alipi</pre>
