--- a/test.html
+++ b/test.html
@@ -4,12 +4,17 @@
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script src="./login.js"></script>
 <script src="./sprintf.js"></script>
-</head>
-<body>
-<img src="http://dev.a11y.in/alipi/images/audio.png" style="position:absolute; top: -1000px;"></img>
 
-<div id="blog_this"></div>
-<!--<input type="button" value="Login" onclick="logMeIn();"></input>
-<input type="button" value="Post" onclick="addNewPost();"></input>-->
+</stylesheet>
+</head>
+<body style="margin: auto 10%;">
+ <img src="http://localhost/alipi-1/server/images/alipi.gif" style="position:relative; top:50px; left:25px; width:10%; height:20%;"></img> 
+<span style="position:relative; top:30px; left:20px; font-size:25px;"> Alipi.us</span>
+<hr style="position:relative; top:30px;">
+
+<div style="position:relative; top:50px; left:320px; font-size:32px;"> Login with this account.</div>
+<div id="blog_this" style="position:relative; top:100px; left:450px;"></div>
+<div style="position:absolute; bottom:3%; left:35%;"> Click on image to login into with that account.</div>
+
 </body>
 </html>
