--- a/server/index.html
+++ b/server/index.html
@@ -20,7 +20,7 @@
     {
     foruri = document.getElementById("inputurl").value;
     if(foruri.substring(0,7) == "http://") {
-    window.open("http://127.0.0.1:5000/?foruri=" + foruri);
+    window.open("http://127.0.0.1:5000/?foruri=" + encodeURIComponent(foruri));
     }
     else if (foruri.substring(0,8) == "https://") {
         window.open("http://127.0.0.1:5000/?foruri=" + foruri);
