Changing the page shown for alipi in github

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #28cf3d;
+      background-color: #000;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
@@ -16,15 +16,15 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #d730c2; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; color: #fff; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #d730c2; }
-    h3 { text-align: center; color: #d730c2; }
-    a { color: #d730c2; }
+    h2 { font-size: 1.5em; color: #fff; }
+    h3 { text-align: center; color: #fff; }
+    a { color: #fff; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
+    pre { background: #000; color: #ff2400; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
@@ -42,15 +42,18 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/Alipi/alipi">alipi</a>
-      <span class="small">by <a href="http://github.com/Alipi">Alipi</a></span></h1>
+    <h1><a href="http://github.com/Alipi/alipi">Alipi</a>
+      <span class="small">by <a href="http://github.com/Alipi">Servelots</a></span></h1>
 
     <div class="description">
       
     </div>
+    <h2>See it on</h2>
+    <a href="http://team.servelots.com/my/pradeep/Sanchaya/index.html">Sanchaya Nele</a>
+
 
     <h2>Contact</h2>
-<p> (info@servelots.com)<br/>      </p>
+<p> info AT servelots DOT com<br/>      </p>
 
 
     <h2>Download</h2>
@@ -59,9 +62,6 @@
       <a href="http://github.com/Alipi/alipi/zipball/master">zip</a> or
       <a href="http://github.com/Alipi/alipi/tarball/master">tar</a> formats.
     </p>
-    <p> You can download the extension at 
-      <a href="https://github.com/downloads/Alipi/alipi/alipi.xpi">this.</a>
-      </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/Alipi/alipi</pre>
