Changed dev environment

--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 </stylesheet>
 </head>
 <body style="margin: auto 10%;">
- <img src="http://localhost/alipi-1/server/images/alipi.gif" style="position:relative; top:50px; left:25px; width:10%; height:20%;"></img> 
+ <img src="http://dev.a11y.in/alipi.gif" style="position:relative; top:50px; left:25px; width:10%; height:20%;"></img> 
 <span style="position:relative; top:30px; left:20px; font-size:25px;"> Alipi.us</span>
 <hr style="position:relative; top:30px;">
 
