--- a/server/index.html
+++ b/server/index.html
@@ -20,7 +20,14 @@
     {
     foruri = document.getElementById("inputurl").value;
     if(foruri.substring(0,7) == "http://") {
+    if(window.location.href == "http://dev.a11y.in/server/")
+    {
+    window.open("http://dev.a11y.in/web?foruri=" + encodeURIComponent(foruri));
+    }
+    else
+    {
     window.open("http://127.0.0.1:5000/?foruri=" + encodeURIComponent(foruri));
+    }
     }
     else if (foruri.substring(0,8) == "https://") {
         window.open("http://127.0.0.1:5000/?foruri=" + encodeURIComponent(foruri));
